# veil

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
crates/veil-cli/src/: main.rs
crates/veil-client/src/: proxy.rs
crates/veil-core/src/: envelope.rs  kdf.rs  keys.rs  lib.rs  session.rs  symmetric.rs
crates/veil-core/tests/: integration.rs  security.rs
crates/veil-java/: pom.xml
crates/veil-java/src/main/java/com/ninjacart/veil/: VeilClientSession.java  VeilEnvelope.java  VeilException.java  VeilKeyPair.java  VeilMetadata.java  VeilNative.java  VeilServerSession.java  VeilSymmetricEnvelope.java  VeilSymmetricKey.java
crates/veil-java/src/main/java/io/veil/: VeilClientSession.java  VeilEnvelope.java  VeilException.java  VeilKeyPair.java  VeilMetadata.java  VeilNative.java  VeilServerSession.java  VeilSymmetricEnvelope.java  VeilSymmetricKey.java
crates/veil-java/src/main/resources/native/darwin/aarch64/: libveil_jni.dylib
crates/veil-java/src/test/java/com/ninjacart/veil/: VeilAsymmetricTest.java  VeilClientSessionTest.java  VeilSymmetricEnvelopeTest.java  VeilSymmetricKeyTest.java
crates/veil-java/src/test/java/io/veil/: VeilAsymmetricTest.java  VeilClientSessionTest.java  VeilSymmetricEnvelopeTest.java  VeilSymmetricKeyTest.java
crates/veil-jni/: Cargo.toml
crates/veil-jni/src/: lib.rs
crates/veil-python/: Cargo.toml  pyproject.toml
crates/veil-python/src/: lib.rs
crates/veil-python/tests/: conftest.py  test_veil_sdk.py
crates/veil-server/src/: config.rs  handler.rs  server.rs
