[workspace]
members = [
    "crates/veil-core",
    "crates/veil-client",
    "crates/veil-server",
    "crates/veil-cli",
    "crates/veil-python",
    "crates/veil-jni",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "MIT OR Apache-2.0"
repository = "https://github.com/oxifederation/veil"
homepage = "https://github.com/oxifederation/veil"
readme = "README.md"
