[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "veil-sdk"
version = "0.1.0"
description = "Python SDK for Veil E2E encrypted LLM inference"
requires-python = ">=3.11"
license = { text = "MIT OR Apache-2.0" }

[tool.maturin]
features = ["pyo3/extension-module"]
